Creada la beta de la intro, añadido gran cantidad de estilos en el CSS, creado variables con versiones transparentes de los colores, añadida la imagen de la puerta.

--- a/html/intro.html
+++ b/html/intro.html
@@ -7,10 +7,11 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1>Hola buenas</h1>
-    <p>Que tal</p>
-    <p>Bobo o que ase</p>
-    <p>Me voy a clavar un pajón</p>
-    <p>Hola</p>
+    <body>
+        <div class="container">
+            <h1 class="titulo">Nexum</h1>
+            <p>En el año 5000, la humanidad enfrenta su mayor desafío. Abre la puerta y desvela los secretos del Beacon.</p>
+            <button id="startButton">Comenzar la Aventura</button>
+        </div>
 </body>
 </html>
