Añadidos parte de los assets, empezado la lógica de interacción de textos, añadidas imágenes de la cinemática inicial.

--- a/html/intro.html
+++ b/html/intro.html
@@ -13,5 +13,6 @@
             <p>En el año 5000, la humanidad enfrenta su mayor desafío. Abre la puerta y desvela los secretos del Beacon.</p>
             <button id="startButton">Comenzar la Aventura</button>
         </div>
+        <script src="../js/pilgrimage.js"></script>
 </body>
 </html>
