Cambiada la ubicación de la carpeta imagenes a recursos

--- a/html/intro.html
+++ b/html/intro.html
@@ -7,7 +7,7 @@
     <title>Inicio</title>
 </head>
 <body>
-    <body>
+    <body class="hub-background">
         <div class="container">
             <h1 class="titulo">Nexum</h1>
             <p>En el año 5000, la humanidad enfrenta su mayor desafío. Abre la puerta y desvela los secretos del Beacon.</p>
