Terminada la beta de la cinemática y del texto introductorio

--- a/html/Cinematic.html
+++ b/html/Cinematic.html
@@ -6,14 +6,16 @@
     <title>Introducción</title>
     <link rel="stylesheet" href="../css/pilgrimage.css">
 </head>
-<body>
+<body  style="background-color: black;">
     <div id="introContainer">
-        <img id="backgroundImage" src="../resources/img/intro1.webp" alt="Fondo">
+        <div id="blurryBackground"></div> <!-- Capa de fondo borrosa -->
+        <img id="backgroundImage" alt="Fondo">
         <div id="dialogBox" style="display: none;">
             <p id="dialogText"></p>
         </div>
         <img id="nextArrow" src="../resources/Icons/10.png" alt="Siguiente" onclick="nextSlide()">
     </div>
+</div>
     <script src="../js/pilgrimage.js"></script>
 </body>
 </html>
