Puesto temporizador en las 4 habitaciones principales

--- a/html/Room3.html
+++ b/html/Room3.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pilgrimage.css">
+    <link rel="stylesheet" href="../css/timer.css" />
     <title>Habitación 1</title>
 </head>
 <body class="room3-background">
-    
+    <div class="timer"></div>
     <script src="../js/pilgrimage.js"></script>
 </body>
+<script src="../js/timer.js"></script>
 </html>
