--- a/html/Room1.html
+++ b/html/Room1.html
@@ -12,4 +12,6 @@
     <script src="../js/pilgrimage.js"></script>
 </body>
 <script src="../js/timer.js"></script>
+<script src="../js/pilgrimage.js"></script>
+<script src="../js/hud.js"></script>
 </html>
