Añadido brillo a la puerta

--- a/html/Room1.html
+++ b/html/Room1.html
@@ -9,6 +9,11 @@
 </head>
 <body class="room1-background">
     <div class="timer"></div>
+
+    <div id="door-glow"></div>
+
+
+
     <script src="../js/pilgrimage.js"></script>
 </body>
 <script src="../js/timer.js"></script>
