--- a/html/Cinematic.html
+++ b/html/Cinematic.html
@@ -16,6 +16,6 @@
         <img id="nextArrow" src="../resources/Icons/10.png" alt="Siguiente" onclick="nextSlide()">
     </div>
 </div>
-    <script src="../js/pilgrimage.js"></script>
+    <script src="../js/cinematic.js"></script>
 </body>
 </html>
