--- a/html/intro.html
+++ b/html/intro.html
@@ -20,7 +20,7 @@
                 <button id="startButton">Start the adventure</button>
             </div>
         </div>
-        <script src="../js/pilgrimage.js"></script>
+        <script src="../js/intro.js"></script>
 </body>
 </html>
 
