--- a/html/Room1.html
+++ b/html/Room1.html
@@ -19,4 +19,27 @@
 <script src="../js/timer.js"></script>
 <script src="../js/pilgrimage.js"></script>
 <script src="../js/hud.js"></script>
+<!--
+    Script de pantalla completa de prueba
+<script>
+    document.getElementById("door-glow").addEventListener('click', function() {
+        var elemento = document.documentElement; // Obtener el elemento raíz
+
+        if (elemento.requestFullscreen) {
+            elemento.requestFullscreen();
+        } else if (elemento.mozRequestFullScreen) { // Firefox
+            elemento.mozRequestFullScreen();
+        } else if (elemento.webkitRequestFullscreen) { // Chrome, Safari & Opera
+            elemento.webkitRequestFullscreen();
+        } else if (elemento.msRequestFullscreen) { // IE/Edge
+            elemento.msRequestFullscreen();
+        }
+    });
+    document.addEventListener('fullscreenchange', function(event) {
+        if (!document.fullscreenElement) {
+        window.location.href = '../misterioso-juego-black-jack/index.html';
+        }
+    });
+</script>
+-->
 </html>
