Cambios en el brillo de la puerta para pantalla HD + Animacion fondo intro

--- a/html/Room1.html
+++ b/html/Room1.html
@@ -18,6 +18,19 @@
 </body>
 <script src="../js/timer.js"></script>
 <script src="../js/hud.js"></script>
+<script>
+    //El siguiente script hace que no puedas hacer zoom en la pagina
+    window.addEventListener("wheel", (e)=>{
+        if(e.ctrlKey){
+            e.preventDefault();
+        }
+    }, {passive:false});
+    //Cuando carga la primera habitacion inicia el timer
+    document.addEventListener("DOMContentLoaded", ()=>{
+        resetTimer();
+    });
+
+</script>
 <!--
     Script de pantalla completa de prueba
 <script>
