--- a/html/Room1.html
+++ b/html/Room1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/timer.css" />
     <title>Habitación 1</title>
 </head>
-<body class="room1-background">
+<body id="room1-background">
     <div class="timer"></div>
 
     <div id="door-glow"></div>
