Añadida funcionalidad pantalla completa, añadido el puzzle de miguel (faltan por hacer cosas), añadidos brillos de todos los items de Room1, alterado un poco el css principal (Hay que separar CSS), hay que borrar fullscreenWarning y hacer cambios donde miguel

--- a/html/intro.html
+++ b/html/intro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pilgrimage.css">
+    <link rel="stylesheet" href="../css/fullscreenWarning.css">
     <title>Inicio</title>
 </head>
 <body>
@@ -20,7 +21,25 @@
                 <button id="startButton">Start the adventure</button>
             </div>
         </div>
-        <script src="../js/intro.js"></script>
+
+        <div class="fullscreen-window-warning" id="fullscreen-window-warning">
+            <div class="fullscreen-window-warning-header">
+              <div class="fullscreen-window-warning-title">WARNING!!</div>
+            </div>
+            <div class="fullscreen-window-warning-body">
+                <br>
+                Take a paper and and pen, or take out your phone or another device to write down clues.
+                <br>
+                <br>
+                Everything that you need is in this page.
+                <br>
+                <br>
+                This game was made to be played on fullscreen go to fullscreen (F11) to close this window 	ψ(｀∇´)ψ
+            </div>
+        </div>
+    <div id="fullscreen-window-warning-overlay"></div>
+
 </body>
+<script src="../js/intro.js"></script>
 </html>
 
