Cambiados px a em, añadido código de las animaciones

--- a/html/Cinematic.html
+++ b/html/Cinematic.html
@@ -6,7 +6,7 @@
     <title>Introducción</title>
     <link rel="stylesheet" href="../css/pilgrimage.css">
 </head>
-<body>
+<body style="background-color: black;">
     <div id="cinematicContainer">
         <div id="blurryBackground" class="cinematicBackground"></div>
         <div id="centerImageContainer">
