Añadidos los brillos restantes y cambiada la ubicación del puzzle de miguel

--- a/html/Room1.html
+++ b/html/Room1.html
@@ -17,6 +17,10 @@
 
     <div id="small-box-glow"></div>
 
+    <div id="big-box-glow"></div>
+
+    <div id="computer-glow"></div>
+
     <div class="modal-puzzle" id="modal-puzzle-box">
         <div id="jm-1">
             <h1 id="msg-slide">Turn: <span id="turns"></span></h1>
@@ -29,7 +33,7 @@
         </div>
         <br>
         <div>
-            <button class="close-modal-btn" id="small-box-puzzle-close-btn">CERRAR</button>
+            <button class="close-modal-btn" id="big-box-puzzle-close-btn">CERRAR</button>
         </div>
     </div>
 
