Cambios minimos: -Boton para salir del modal cambiado para que se vea mas bonito -Puestos punteros en el HUD

--- a/html/Room1.html
+++ b/html/Room1.html
@@ -31,9 +31,8 @@
               </div>
         </div>
         </div>
-        <br>
         <div>
-            <button class="close-modal-btn" id="big-box-puzzle-close-btn">CERRAR</button>
+            <button class="close-modal-btn" id="big-box-puzzle-close-btn">CLOSE</button>
         </div>
     </div>
 
