todas las fases del cristalario listas

--- a/html/CrystalariumTest.html
+++ b/html/CrystalariumTest.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minijuego de Colores</title>
-    <link rel="stylesheet" href="../css/crystalariumPuzzle.css"> <!-- Enlace al archivo CSS externo -->
+    <link rel="stylesheet" href="../css/crystalariumPuzzle.css"> 
 </head>
 <body>
     <h1>Minijuego de Colores</h1>
     <div id="objetivo"></div>
     <div id="botones"></div>
-    <script src="../js/crystalariumPuzzle.js"></script> <!-- Asegúrate de que la ruta es correcta -->
+   
 </body>
+<script src="../js/crystalariumPuzzle.js"></script> 
 </html>
