--- a/html/puzzleDani2.html
+++ b/html/puzzleDani2.html
@@ -16,7 +16,8 @@
 <body>
     
     <div id="simon-container">
-        <div class="simon-score">Ronda 1</div>
+        <div class="simon-score" id="simon-score">Round 1</div>
+        <div id="simon-start-button"><button class="close-modal-btn" onclick="playRound()">START</button></div>
         <div class="simon-first-row">
             <div class="simon-tile" id="simon-first-row-green"></div>
             <div class="simon-tile" id="simon-first-row-red"></div>
