Añadido que se inicie el timer SOLO cuando se salte desde cinematic a ROOM 1

--- a/html/Cinematic.html
+++ b/html/Cinematic.html
@@ -22,6 +22,7 @@
     
 </body>
 <script src="../js/cinematic.js"></script>
+<script src="../js/timer.js"></script>
 <script>
     //El siguiente script hace que no puedas hacer zoom en la pagina
     window.addEventListener("wheel", (e)=>{
