--- a/html/Room1.html
+++ b/html/Room1.html
@@ -52,9 +52,10 @@
     }, {passive:false});
 
     //Cuando carga la primera habitacion inicia el timer
-    document.addEventListener("DOMContentLoaded", ()=>{
-        resetTimer();
-    });
+    //document.addEventListener("DOMContentLoaded", ()=>{
+    //    resetTimer();
+    //});
+    
 //Codigo de abajo de testing de bolas
 document.getElementById("door-glow").addEventListener("click", ()=>{
         let bolas = true;
