Mejoras al puzzle del Simon Dice

--- a/html/puzzleDani2.html
+++ b/html/puzzleDani2.html
@@ -17,7 +17,7 @@
     
     <div id="simon-container">
         <div class="simon-score" id="simon-score">Round 1</div>
-        <div id="simon-start-button"><button class="close-modal-btn" onclick="playRound()">START</button></div>
+        <div id="simon-start-button"><button class="close-modal-btn" id="start-button" onclick="playRound()">START</button></div>
         <div class="simon-first-row">
             <div class="simon-tile" id="simon-first-row-green"></div>
             <div class="simon-tile" id="simon-first-row-red"></div>
