Cristalario completado a falta de pulido y creados los archivos para empezar el ordenador

--- a/html/CrystalariumTest.html
+++ b/html/CrystalariumTest.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="../css/crystalariumPuzzle.css"> 
 </head>
 <body>
-    <h1>Minijuego de Colores</h1>
-    <div id="objetivo"></div>
-    <div id="botones"></div>
+    <div id="game-container">
+        <div id="screen">
+            <h1 class="text">CRYSTALARIUM</h1>
+            <div id="objetivo" class="text"></div>
+            <div id="botones"></div>
+        </div>
+    </div>
    
 </body>
 <script src="../js/crystalariumPuzzle.js"></script> 
