refactorizados todos los nombres del cristalario y añadida pantalla final que evita que se pueda seguir jugando

--- a/html/CrystalariumTest.html
+++ b/html/CrystalariumTest.html
@@ -6,12 +6,12 @@
     <title>Minijuego de Colores</title>
     <link rel="stylesheet" href="../css/crystalariumPuzzle.css"> 
 </head>
-<body>
-    <div id="game-container">
-        <div id="screen">
-            <h1 class="text">CRYSTALARIUM</h1>
-            <div id="objetivo" class="text"></div>
-            <div id="botones"></div>
+<body id="body-crystal">
+    <div id="game-container-crystal">
+        <div id="screen-crystal">
+            <h1 id="h1-crystal" class="text-crystal">CRYSTALARIUM</h1>
+            <div id="objetivo-crystal" class="text"></div>
+            <div id="botones-crystal"></div>
         </div>
     </div>
    
