--- a/html/CrystalariumTest.html
+++ b/html/CrystalariumTest.html
@@ -6,11 +6,11 @@
     <title>Minijuego de Colores</title>
     <link rel="stylesheet" href="../css/crystalariumPuzzle.css"> 
 </head>
-<body id="body-crystal">
+<body>
     <div id="game-container-crystal">
         <div id="screen-crystal">
             <h1 id="h1-crystal" class="text-crystal">CRYSTALARIUM</h1>
-            <div id="objetivo-crystal" class="text"></div>
+            <div id="objetivo-crystal" class="text-crystal"></div>
             <div id="botones-crystal"></div>
         </div>
     </div>
