--- a/html/Room1.html
+++ b/html/Room1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/room1.css">
     <link rel="stylesheet" href="../css/hud.css">
     <link rel="stylesheet" href="../css/slidePuzzle.css" />
+    <link rel="stylesheet" href="../css/crystalariumPuzzle.css" />
     <title>Habitación 1</title>
 </head>
 <body id="room1-background">
@@ -35,6 +36,15 @@
             <button class="close-modal-btn" id="big-box-puzzle-close-btn">CLOSE</button>
         </div>
     </div>
+    <div class="modal-puzzle" id="modal-puzzle-small-box">
+        <div id="game-container-crystal">
+            <div id="screen-crystal">
+                <h1 id="h1-crystal" class="text-crystal">CRYSTALARIUM</h1>
+                <div id="objetivo-crystal" class="text-crystal"></div>
+                <div id="botones-crystal"></div>
+            </div>
+        </div>
+    </div>
 
     <div id="background-overlay"></div>
     
@@ -42,6 +52,7 @@
 <script src="../js/timer.js"></script>
 <script src="../js/hud.js"></script>
 <script src="../js/slidePuzzle.js"></script>
+<script src="../js/crystalariumPuzzle.js"></script>
 <script src="../js/modalOpener.js"></script>
 <script>
     
