textos del hub introducidos

--- a/index.html
+++ b/index.html
@@ -15,15 +15,9 @@
     </div>
     <div id="hub-second-row">
       <div id="hub-instructions-box">
-        <h1 id="hub-instructions-b">Instrucciones de texto</h1>
+        <h1 id="hub-instructions-b">INSTRUCTIONS</h1>
         <hr />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Arcu odio ut sem
-        nulla pharetra diam sit amet nisl. Viverra adipiscing at in tellus
-        integer feugiat. Massa eget egestas purus viverra accumsan in nisl.
-        Malesuada bibendum arcu vitae elementum curabitur vitae. Nisi quis
-        eleifend quam adipiscing vitae proin sagittis nisl. Elit sed vulputate
-        mi sit.
+        Welcome to our science fiction-themed escape room! To complete the objective, you'll need to solve all the puzzles to acquire the necessary pieces to unlock the door within 60 minutes. Throughout the abandoned spaceship, you'll discover clues and objects to assist you in completing the 6 required challenges. If you need assistance, utilize the hint button (shaped like a question mark), and remember, you can adjust settings using the gear icon.
       </div>
       <div id="hub-presentation-box">
         <div class="hub-promotor-card">
@@ -31,9 +25,7 @@
           <div class="hub-promotor-card-name">Miguel Vizcaino San Segundo</div>
           <hr />
           <div class="hub-promotor-card-desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu
-            odio ut sem nulla pharetra diam sit amet nisl.
+            Proud Hufflepuff through and through, dedicated advocate for Rural Trails. When I'm not harvesting olives, you'll find me cheering for Atleti. At 24, I'm more into building than battling in Minecraft
           </div>
         </div>
         <div class="hub-promotor-card">
@@ -41,9 +33,7 @@
           <div class="hub-promotor-card-name">Erik Chaparro de las Heras</div>
           <hr />
           <div class="hub-promotor-card-desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu
-            odio ut sem nulla pharetra diam sit amet nisl.
+            My favorite jam is raspberry, and cereal goes before milk; I consider white chocolate as good as any other, and definitely, melon and ham don't go together. Versatile is the word that best defines me, and I'm 21 years old.
           </div>
         </div>
         <div class="hub-promotor-card">
@@ -51,16 +41,14 @@
           <div class="hub-promotor-card-name">Daniel Rodríguez Olivar</div>
           <hr />
           <div class="hub-promotor-card-desc">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu
-            odio ut sem nulla pharetra diam sit amet nisl.
+            El Dani suuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu uuuu u uuuuuuu
           </div>
         </div>
       </div>
     </div>
     <div id="hub-third-row">
       <div id="hub-name-input-box">
-        <input type="text" id="hub-name-input" maxlength="8" />
+        <input type="text" id="hub-name-input" maxlength="8" placeholder="name..."/>
       </div>
       <div id="hub-icon-selector">
         <img src="resources/sprites/Horacio.png" alt="Horacio" />
