Cambiados los iconos del hub para poder seleccionar un icono de jugador

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <input type="text" id="hub-name-input" maxlength="8" placeholder="name..."/>
       </div>
       <div id="hub-icon-selector">
-        <img src="resources/sprites/Horacio.png" alt="Horacio" />
+        <img id="hub-icon-selector-img" src="resources/sprites/Horacio.png" alt="Horacio" />
       </div>
       <div id="hub-blank-space"></div>
       <div id="hub-start-button-box">
