--- a/html/Room1.html
+++ b/html/Room1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/slidePuzzle.css" />
     <link rel="stylesheet" href="../css/crystalariumPuzzle.css" />
     <link rel="stylesheet" href="../css/doorPuzzle.css" />
-    <title>Habitación 1</title>
+    <title>Room 1 (Door Room)</title>
 </head>
 <body id="room1-background">
     <div class="timer"></div>
