--- a/html/Room4.html
+++ b/html/Room4.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pilgrimage.css">
     <link rel="stylesheet" href="../css/timer.css" />
-    <title>Habitación 1</title>
+    <title>Room 4 (Darkness)</title>
 </head>
 <body class="room4-background">
     <div class="timer"></div>
