Cambio minimo de traduccion en Hub y puesto puntero en el simon dice en los colores

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="hub-promotor-card-name">Daniel Rodríguez Olivar</div>
           <hr />
           <div class="hub-promotor-card-desc">
-            My blurry sight and my clear sense of fun made me the best puzzle designer on this project. I was sure that you will distinguis witch puzzles are mine.
+            My blurry sight and my clear sense of fun made me the best puzzle designer on this project. I was sure that you will distinguish which puzzles are mine. 23y/o.
           </div>
         </div>
       </div>
