Juego Funcional, sin CSS

--- a/html/puzzleCorridor.html
+++ b/html/puzzleCorridor.html
@@ -12,7 +12,7 @@
     <div id="jm-2">
       <h1>Corridor</h1>
       <div id="maze-header">
-        <button id="enterRoom">Go in...</button>
+        <button id="enterRoom">Go back in</button>
       </div>
       <div id="maze-container">
 
