--- a/html/puzzleCorridor.html
+++ b/html/puzzleCorridor.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/styleCorridor.css" />
+    <link rel="stylesheet" href="../css/pilgrimage.css">
     <title>Corridor</title>
   </head>
 
@@ -12,7 +13,7 @@
     <div id="jm-2">
       <h1>Corridor</h1>
       <div id="maze-header">
-        <button id="enterRoom">Go back in</button>
+        <button id="enterRoom" class="close-modal-btn">Go back in</button>
       </div>
       <div id="maze-container">
 
