Dios nos pille confesados, lógica básica del puzzle del PC completada, gargantuesco json de palabras creado

--- a/html/ComputerTest.html
+++ b/html/ComputerTest.html
@@ -9,9 +9,14 @@
         <img src="../resources/img/PC/scanlines.png" id="scan-computer"class="noselect"/>
         <img src="../resources/img/PC/bezel.png" id="bezel-computer" class="noselect"/>
         <div id="content-computer" class="noselect">
-            
+          <div id="attempts"></div> <!-- Contenedor para intentos -->
+          <div id="word-container"></div> <!-- Contenedor para palabras -->
         </div>
     </div>
-  </body>
+    <script src="../js/computerTest.js"></script>
 
+  </body>
+ 
 </html>
+<html>
+ 
